<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <ListPreference
        android:defaultValue="@string/pref_choice_default"
        android:entries="@array/pref_choice_list_titles"
        android:entryValues="@array/pref_choice_list_values"
        android:key="@string/pref_choice_list_key"
        android:title="@string/pref_choice_label" />

    <!-- <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_location_default"
        android:inputType="number"
        android:maxLines="1"
        android:key="@string/pref_location_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_location_label" /> -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


</PreferenceScreen>
