<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    android:id="@+id/scroll_layout1"
    tools:context="com.nagaraju.rakshith.moviestage.DetailActivity$PlaceholderFragment">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linear_layout1">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/linear_layout2">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/darkBlue"
            android:id="@+id/frame_layout_movie_title">
            <TextView android:text="@string/hello_world"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="@dimen/Title_text_size"
                android:layout_gravity="center"
                android:textColor="@color/colorTextPrimary"
                android:id="@+id/detail_text"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linear_layout3"
            android:background="#E0E0E5">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/frame_layout_movie_poster"
                card_view:cardElevation="1dp"
                android:layout_margin="10dp">
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scaleType="centerCrop"
                    android:id="@+id/detail_picture"/>
            </android.support.v7.widget.CardView>

        </FrameLayout>



        <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:id="@+id/frame_layout_ratings"
                card_view:cardElevation="1dp"
                android:layout_margin="10dp">
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="#3F51B5">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="3dp"
                android:id="@+id/linear_layout_detail_rating">
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/rating_title"
                    android:text="@string/rating_title"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/detail_rating"
                    android:text="@string/app_name"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="3dp"
                android:id="@+id/linear_layout_detail_release_date">
                <TextView
                    android:layout_marginLeft="@dimen/text_layout_margin_left"
                    android:layout_marginTop="@dimen/text_layout_margin_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:paddingTop="@dimen/text_layout_top_padding"
                    android:paddingLeft="@dimen/text_layout_left_padding"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/release_date_title"
                    android:textStyle="bold"
                    android:text="@string/release_date_title"/>
                <TextView
                    android:layout_marginRight="@dimen/text_layout_margin_right"
                    android:layout_marginTop="@dimen/text_layout_margin_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/text_layout_bottom_padding_small"
                    android:paddingTop="@dimen/text_layout_top_padding"
                    android:paddingLeft="@dimen/text_layout_left_padding"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorTextPrimary"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/detail_release_date"
                    android:text="@string/release_date_title"/>


            </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/frame_layout_movie_plot"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="1dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/linear_layout_detail_plot">

                <TextView
                    android:layout_margin="@dimen/text_layout_margin"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:paddingBottom="@dimen/text_layout_bottom_padding_large"
                    android:paddingTop="@dimen/text_layout_top_padding"
                    android:paddingLeft="@dimen/linear_layout_left_padding"
                    android:textSize="@dimen/text_size"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/plot_title"
                    android:textStyle="bold"
                    android:background="@color/colorTextPrimary"
                    android:text="@string/plot_title"/>

                <TextView
                    android:layout_margin="@dimen/text_layout_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/text_layout_bottom_padding_large"
                    android:paddingTop="@dimen/text_layout_top_padding"
                    android:paddingLeft="@dimen/linear_layout_left_padding"
                    android:textSize="@dimen/text_size"
                    android:textStyle="italic"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/detail_plot"
                    android:text="@string/app_name"
                    android:background="#FFFFFF"/>



            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>

</ScrollView>